tests/error/type_errors/if_expr_not_bool.err
Guppy compilation failed. Error in file $FILE:12

10:    @module
11:    def foo(x: NonBool) -> int:
12:        return 1 if x else 0
                       ^
GuppyTypeError: Expression of type `NonBool` cannot be interpreted as a `bool`
